@@ -94,12 +94,13 @@ totest['figures'] = [
    :width: 200
    :scale: 50
    :figwidth: 300
+   :figclass: class1 class2
 
    A picture with image options on individual lines, and this caption.
 """,
 """\
 <document source="test data">
-    <figure width="300">
+    <figure classes="class1 class2" width="300">
         <image alt="alternate text" height="100" scale="50" uri="picture.png" width="200">
         <caption>
             A picture with image options on individual lines, and this caption.
